# CMakeList.txt : CMake project for Concurrent Linked Lists, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Concurrent Linked Lists")

# Add source to this project's executable.
add_executable (CMakeTarget "Concurrent Linked Lists.cpp" "Concurrent Linked Lists.h")

# TODO: Add tests and install targets if needed.
